@@ -1,3 +1,6 @@
+2012-10-27 dschulze@adobe.com
+	Add origin restriction for resources.
+
 2012-10-26 dschulze@adobe.com
 	Add issue to 'mask' property after feedback from Mozilla.
 	Link clean up.
